<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/General"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/Limitador"
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:orientation="vertical"></LinearLayout>

    <LinearLayout
        android:id="@+id/Seccion1"
        android:layout_width="match_parent"
        android:layout_height="107dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Num1"
            android:layout_width="39dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_red_light"
            android:text="@string/numero1"
            android:textColor="@android:color/background_light"
            tools:text="Numero1" />

        <EditText
            android:id="@+id/num1"
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Seccion2"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Num2"
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_red_light"
            android:text="@string/numero2"
            android:textColor="@android:color/background_light" />

        <EditText
            android:id="@+id/num2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Seccion3"
        android:layout_width="294dp"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/resul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/resultado"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/resultado"
            android:layout_width="14dp"
            android:layout_height="39dp"
            android:layout_weight="1"
            android:text="@string/_0_0"
            android:textAlignment="viewStart"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Seccion4"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:orientation="horizontal"
        android:padding="20dp">

        <Button
            android:id="@+id/suma"
            android:layout_width="11dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@android:color/holo_green_light"
            android:gravity="center"
            android:text="@string/suma"
            android:textSize="14sp"
            tools:text="Suma" />

        <Button
            android:id="@+id/resta"
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@android:color/holo_red_dark"
            android:gravity="center"
            android:text="@string/resta"
            android:textSize="14sp"
            tools:text="resta" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Seccion5"
        android:layout_width="match_parent"
        android:layout_height="101dp"
        android:orientation="horizontal"
        android:padding="20dp">

        <Button
            android:id="@+id/division"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_bright"
            android:gravity="center"
            android:text="@string/division"
            android:textSize="14sp"
            tools:text="Division" />

        <Button
            android:id="@+id/multiplicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@android:color/holo_red_light"
            android:gravity="center"
            android:text="@string/multiplicacion"
            android:textSize="14sp"
            tools:text="Multiplicacion" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Seccion6"
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:orientation="horizontal"
        android:paddingLeft="70dp"
        android:paddingEnd="70dp">

        <Button
            android:id="@+id/modulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:text="@string/modulo"
            android:textSize="14sp"
            tools:text="Modulo" />
    </LinearLayout>

</LinearLayout>